# apriltags

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  LICENSE  Makefile  README  README.md  catkin.cmake  mainpage.dox  manifest.xml  package.xml
cmake/Modules/: FindYamlCpp.cmake
include/: apriltags.h
launch/: _launch.apriltags_softkinetic  _launch.object_pose_markerarray  apriltags.launch  kinect2.launch  percy.launch  softkinetic.launch  structureio.launch
msg/: AprilTagDetection.msg  AprilTagDetections.msg
src/: apriltags.cpp  apriltags_demo.cpp  camtest.cpp  detect_apriltags.cpp
src/apriltags/: apriltags.py
src/apriltags/srv/: _IsRunning.py  _Start.py  _Stop.py  _StopAll.py  __init__.py
srv_gen/cpp/include/apriltags/: IsIdOpen.h  IsRunning.h  RunningIds.h  Start.h  Stop.h  StopAll.h
srv_gen/lisp/: IsIdOpen.lisp  IsRunning.lisp  RunningIds.lisp  Start.lisp  Stop.lisp  StopAll.lisp  _package.lisp  _package_IsIdOpen.lisp  _package_IsRunning.lisp  _package_RunningIds.lisp  _package_Start.lisp  _package_Stop.lisp  _package_StopAll.lisp  apriltags-srv.asd
