<?xml version="1.0"?>
<package>
  <name>apriltags</name>
  <version>0.0.1</version>
  <description>
     C++ port of the AprilTags library, using OpenCV (and optionally, CGAL)
  </description>
  <url type="repository">https://github.com/personalrobotics/apriltags</url>
  <maintainer email="awalsman@andrew.cmu.edu">Aaron Walsman</maintainer>
  <author email="awalsman@andrew.cmu.edu">Aaron Walsman</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>git</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
