<?xml version="1.0"?>
<package format="2">
  <name>apriltags</name>
  <version>0.0.2</version>
  <description>
    ROS wrapper for the Swatbotics C++ port of the Apriltags visual
    fiducial tracker.  Apriltags was originally developed by the April
    laboratory at the University of Michigan.  The Swatbotics port
    reimplements the detection core using OpenCV and CGAL for improved
    performance.
  </description>
  <url type="repository">https://github.com/personalrobotics/apriltags</url>
  <maintainer email="awalsman@andrew.cmu.edu">Aaron Walsman</maintainer>
  <author email="awalsman@andrew.cmu.edu">Aaron Walsman</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>git</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>cgal</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
